--- a/blue.html
+++ b/blue.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1 style="color: #00F">The Blue Page</h1>
-    <p>Blue is the color of the sky.</p>    
+    <p>Blue is the color of the sky.</p>   
+    
+    <h2>Navigation</h2>
+    <ul>
+        <li>
+            <a href="./index.html">Return to home page</a>
+        </li>
+        
+    </ul> 
 </body>
 </html>
