--- a/orange.html
+++ b/orange.html
@@ -11,5 +11,14 @@
         <span style="color: #F90">fruit</span>
         named after it.
     </p>
+
+    
+    <h2>Navigation</h2>
+    <ul>
+        <li>
+            <a href="./index.html">Return to home page</a>
+        </li>
+        
+    </ul>
 </body>
 </html>
