Link HTML pages to stylesheet

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li style="color: #00F">
                 <a href="./blue.html">The Blue Page</a>
             </li>
+            <li><a href="./dummy.html">The Dummy Page</a></li>
         </ul>
 
 </body>
