Add CSS stylesheet to rainbow.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Colofur Website</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1 style="color: #07F">A Colofur Website</h1>
