--- a/blue.html
+++ b/blue.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Blue Page</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1 style="color: #00F">The Blue Page</h1>
