--- a/rainbow.html
+++ b/rainbow.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Crazy Experiment</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        div {
+            width: 300px;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
     <h1>A Creazy Experiment</h1>
     <p>Look! A Rainbow!</p>
-    <ul>
-        <li style="color: red;">Red</li>
-        <li style="color: orange;">Orange</li>
-        <li style="color: yellow;">Yellow</li>
-        <li style="color: blue;">Blue</li>
-        <li style="color: indigo;">Indigo</li>
-        <li style="color: violet;">Violet</li>
-    </ul>
+    <div style="background-color: red;"></div>
+    <div style="background-color: orange;"></div>
+    <div style="background-color: yellow;"></div>
+    <div style="background-color: green;"></div>
+    <div style="background-color: blue;"></div>
+    <div style="background-color: indigo;"></div>
+    <div style="background-color: violet;"></div>
     <a href="./index.html">Return to home page</a>
 </body>
 </html>
