--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <h2 style="color: #C00">News</h2>
         <ul>
             <li style="color: #C00;"><a href="./news-1.html">Blue Is The New Hue</a></li>
-            <li><a href="./rainbow.html">Our New Rainbow</a></li>gi
+            <li><a href="./rainbow.html">Our New Rainbow</a></li>
+            <li><a href="new-2.html">A Red Rebeleion</a></li>
         </ul>
 
     <h2>Navigation</h2>
