--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <ul>
             <li style="color: #C00;"><a href="./news-1.html">Blue Is The New Hue</a></li>
             <li><a href="./rainbow.html">Our New Rainbow</a></li>
-            <li><a href="new-2.html">A Red Rebeleion</a></li>
+            <li><a href="new-2.html">A Red Rebeleion
+            </a></li>
         </ul>
 
     <h2>Navigation</h2>
         <ul>
+            <li><a href="about/index.html">About Us</a></li>
             <li style="color: #F90">
                 <a href="./orange.html">The Orange Page</a>
             </li>
