--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </li>
             <li><a href="./rainbow.html">The Rainbow Page</a></li>
             <li style="color: #C00;"><a href="./red.html">The Red Page</a></li>
-            
+            <li style="color: #FF0;"><a href="./yellow.html">The yellow Page</a></li>
         </ul>
 
 </body>
