--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul>
             <li style="color: #C00;"><a href="./news-1.html">Blue Is The New Hue</a></li>
             <li><a href="./rainbow.html">Our New Rainbow</a></li>
-            <li><a href="new-2.html">A Red Rebeleion
-            </a></li>
+            <li><a href="new-2.html">A Red Rebeleion</a></li>
+            <li><a href="news-3.html">Middle East's Silent Beast</a></li>
         </ul>
 
     <h2>Navigation</h2>
