--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <li style="color: #C00;"><a href="./red.html">The Red Page</a></li>
             <li style="color: #FF0;"><a href="./yellow.html">The yellow Page</a></li>
             <li style="color: #0C0;"><a href="./green.html">The Green Page</a></li>
-            
+            <li style="color: #F0F;"><a href="pink.html">The Pink Page</a></li>
+
         </ul>
 
 </body>
