--- a/pink.html
+++ b/pink.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="color: #F0F;">The Pink Page</h1>
-    <p>Pink is <span style="color: #F0F;">girly, flirty and fun</span>!</p>
+    <p>Pink is <span style="color: #F0F;">real man</span> wear pink!</p>
 
     <p><a href="index.html">Return to home page</a></p>
 
